--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+11
+version: 1.0.0+13
 
 environment:
   sdk: ^3.7.2
@@ -41,8 +41,20 @@ dependencies:
   # Device information
   device_info_plus: ^9.1.0
   
-  # WebView for YouTube integration
-  webview_flutter: ^4.4.2
+  # Native video player for true dual playback
+  flutter_vlc_player: ^7.4.2
+  
+  # Alternative audio player
+  just_audio: ^0.9.39
+  
+  # Video player for fallback
+  video_player: ^2.8.6
+  
+  # YouTube URL extraction
+  youtube_explode_dart: ^2.2.1
+  
+  # HTTP requests for video metadata
+  http: ^1.1.0
   
   # Volume control
   volume_controller: ^2.0.7
